--- a/one/Assignment1_Group4.tex
+++ b/one/Assignment1_Group4.tex
@@ -137,7 +137,7 @@ The current implementation consists of the following files:
 \end{center}
 
 \subsection*{Iterative policy evaluation}
-As described in the assignment, policy evaluation is implemented. The results will be analyzed in terms of agent (predator) and goal state (prey) locations. The following cases have been analyzed: %  The locations of the predator are marked green and the locations of the prey are marked red to increase readability.
+As described in the assignment, policy evaluation is implemented. The results will be analyzed in terms of agent (predator) and goal state (prey) locations. The following cases have been analyzed: 
 \begin{center}
 	\begin{tabular}{ |l | l | l | l | l | l | l| }
 		Case & Predator & Value & Prey & Value & Discount Factor & Iterations to converge \\ 
@@ -158,127 +158,6 @@ Case two starts with the agent at (2,3) with the prey located at (5,4). The dist
 In case 3, the agent starts at (2,10) and the prey at (10,0). Using the properties of the toroidal grid, the shortest distance between the agent and the goal state is (3, 1), again. This shows that the distance between the agent and the goal state is exactly the same as in case 2. \\ 
 
 Case 4 has the agent starting at (10,10) and the prey located at (0,0). The distance between the agent and the goal state is (1, 1). The predator is very close to the goal state. The difference between the values of the predator and the prey is quite small, especially compared with the previous cases.  \\
-
-\iffalse
-%COMMENTED OUT AS IT SEEMS OBSOLETE!!!
-
-Case 1 is the maximum distance between the predator and the prey. In this case, moving in a diagonal direction gets the agent to the prey fastest. Since this is not possible, the predator must move in a horizontal - vertical fashion to reach the goal state. This takes at least ten timesteps. As this is the maximum distance between the predator and the prey, it will take relatively long for the predator to catch the prey.
-
-Starting with case 1, the following result is calculated:
-
-\begin{center}
-\scalebox{0.7}
-	{
-	\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
-	\hline
-	\multicolumn{12}{|c|}{Value grid in loop 32, Predator(0,0), Prey(5,5)}\\
-	\hline
-	Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
-
-\hline
-0 & \cellcolor{green!40}0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 \\
-1 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 \\
-2 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 \\
-3 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 \\
-4 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 \\
-5 & 0.033106 & 0.085283 & 0.280822 & 0.991487 & 3.741537 & \cellcolor{red!40}2.850622 & 3.741537 & 0.991487 & 0.280822 & 0.085283 & 0.033106 \\
-6 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 \\
-7 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 \\
-8 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 \\
-9 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 \\
-10 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 \\
-\hline
-	\end{tabular}
-	}
-\end{center}
-
-\begin{center}
-\scalebox{0.7}
-	{
-	\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
-	\hline
-	\multicolumn{12}{|c|}{Value grid in loop 32, Predator(2,3), Prey(5,4)}\\
-	\hline
-	Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
-
-\hline
-0 & 0.005538 & 0.010435 & 0.018407 & 0.027837 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 \\
-1 & 0.009923 & 0.020607 & 0.040185 & 0.067041 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 \\
-2 & 0.020607 & 0.047865 & 0.105160 & \cellcolor{green!40}0.198928 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 \\
-3 & 0.040185 & 0.105160 & 0.265391 & 0.591645 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 \\
-4 & 0.067041 & 0.198928 & 0.591645 & 1.650667 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 \\
-5 & 0.085283 & 0.280822 & 0.991487 & 3.741537 & \cellcolor{red!40}2.850622 & 3.741537 & 0.991487 & 0.280822 & 0.085283 & 0.033106 & 0.033106 \\
-6 & 0.067041 & 0.198928 & 0.591645 & 1.650667 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 \\
-7 & 0.040185 & 0.105160 & 0.265391 & 0.591645 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 \\
-8 & 0.020607 & 0.047865 & 0.105160 & 0.198928 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 \\
-9 & 0.009923 & 0.020607 & 0.040185 & 0.067041 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 \\
-10 & 0.005538 & 0.010435 & 0.018407 & 0.027837 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 \\
-\hline
-	\end{tabular}
-	}
-\end{center}
-
-With the agent starting at (2,3) and the prey located at (5,4), the predator is near the goal state. In the best case scenario, it will take the predator at least four timesteps to reach the goal state. After moving South for two consecutive timesteps, the agent can choose to move East or South in order to optimize the immediate reward. However, that does assume an optimal policy, while the predator has a random policy. % does this make sense? Idunno
-
-\begin{center}
-\scalebox{0.7}
-	{
-	\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
-	\hline
-	\multicolumn{12}{|c|}{Value grid in loop 32, Predator(2,10), Prey(10,0)}\\
-	\hline
-	Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
-
-\hline
-0 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 \\
-1 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 \\
-2 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & \cellcolor{green!40}0.198928 \\
-3 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 \\
-4 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 \\
-5 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 \\
-6 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 \\
-7 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 \\
-8 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 \\
-9 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 \\
-10 & \cellcolor{red!40}2.850622 & 3.741537 & 0.991487 & 0.280822 & 0.085283 & 0.033106 & 0.033106 & 0.085283 & 0.280822 & 0.991487 & 3.741537 \\
-
-\hline
-	\end{tabular}
-	}
-\end{center}
-
-With the agent starting at (2,10) and the prey at (10,0), it will take the agent four steps to reach the prey. This shows the effects of the toroidal grid. The advantage of the toroidal grid, in this case, is that the distance between the agent and the goal state is exactly the same as in the previous case. This means that the maximum distance between the agent and the goal state is always a minimum of ten timesteps.
-
-\begin{center}
-\scalebox{0.7}
-	{
-	\begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
-	\hline
-	\multicolumn{12}{|c|}{Value grid in loop 32, Predator(10,10), Prey(0,0)}\\
-	\hline
-	Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
-
-\hline
-0 & \cellcolor{red!40} 2.850622 & 3.741537 & 0.991487 & 0.280822 & 0.085283 & 0.033106 & 0.033106 & 0.085283 & 0.280822 & 0.991487 & 3.741537 \\
-1 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & 1.650667 \\
-2 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 \\
-3 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 \\
-4 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 \\
-5 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 \\
-6 & 0.033106 & 0.027837 & 0.018407 & 0.010435 & 0.005538 & 0.003357 & 0.003357 & 0.005538 & 0.010435 & 0.018407 & 0.027837 \\
-7 & 0.085283 & 0.067041 & 0.040185 & 0.020607 & 0.009923 & 0.005538 & 0.005538 & 0.009923 & 0.020607 & 0.040185 & 0.067041 \\
-8 & 0.280822 & 0.198928 & 0.105160 & 0.047865 & 0.020607 & 0.010435 & 0.010435 & 0.020607 & 0.047865 & 0.105160 & 0.198928 \\
-9 & 0.991487 & 0.591645 & 0.265391 & 0.105160 & 0.040185 & 0.018407 & 0.018407 & 0.040185 & 0.105160 & 0.265391 & 0.591645 \\
-10 & 3.741537 & 1.650667 & 0.591645 & 0.198928 & 0.067041 & 0.027837 & 0.027837 & 0.067041 & 0.198928 & 0.591645 & \cellcolor{green!40}1.650667 \\
-
-\hline
-	\end{tabular}
-	}
-\end{center}
-
-The agent starts at (10,10) and the prey is located at (0,0). It takes the agent at least two steps to catch the prey. Using the property that the grid is toroidal minimizes the distance between the agent and the prey. 
-% END COMMENTED OUT!!!!
-\fi
 
 % Temporarily printing in order to compare 
 
@@ -324,29 +203,11 @@ Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
 
 The table shown above depicts the optimal policy, where the prey is located at (5,5). Policy iteration can assign multiple optimal transitions to a state. The optimal transitions all have the same probability of being chosen, while all other transition probabilities are set to zero. In the cases where there are multiple optimal actions, one of the actions was selected. This creates an optimal, deterministic policy.
 
-\iffalse
-% WILL BECOME OBSOLETE
-As described in the introduction, the agent can move North, South, East, West and Wait. To keep notation as clear and concise as possible, only the first letter of the optimal policy is printed. For clarity, the state 'Wait' is renamed to 'Hold' and is depicted as 'H' where applicable. 
-% END OBSOLETE
-\fi
 % Is it correct that (5,5) can go to North, East, South, West? 
 
 % Temporarily printing only these examples in order to compare
 % Iterative policy evaluation and policy iteration yield exactly the same solution (at least for discount factor = 0.8). 
 % Is this expected behavior? 
-\iffalse
-% I think this is obsolete
-\begin{center}
-	\begin{tabular}{ l | l | l | l | l }
-		Predator & Prey & Value & Discount Factor & Iterations to converge \\ 
-		\hline
-		(0, 0) & (5, 5) & 0.00335 & 0.8 & 2 \\
-		(2, 3) & (5, 4) & 0.19892 & 0.8 & 2 \\
-		(2, 10) & (10, 0) & 0.19892 & 0.8 & 2 \\
-		(10, 10) & (0, 0) & 1.65066 & 0.8 & 2 \\	
-	\end{tabular}
-\end{center}
-\fi
 
 It takes a few iterations to converge. These are always the same. This can be expected as policy evaluation always takes the same amount of time and policy improvement is applied to the entirety of the grid. This means that each computation is essentially the same and should take the same amount of time.
 % Since it's always 2, maybe it would be interesting to also print the number of iterations it takes for the value grid to 
@@ -411,8 +272,6 @@ This shows that value iteration has the exact same results as policy iteration. 
 	\end{tabular}
 \end{center}
 
-
-
 For states with the same Manhattan distance, the diagonal states have a higher value. This happens, due to the fact that the prey is twice as likely to move toward the predator instead of away from it. When observing the distance between the predator and the prey in a straight line, the prey has a $0.05 \times 3$ probability of moving away from the predator. However, when taking into account the same distance diagonally, the prey only has a probability of $0.05 \times 2$ of moving away.
 
 \subsection*{Smarter state-space encoding}
@@ -433,9 +292,6 @@ Smarter state-space encoding does indeed improve performance
 \item helpers.py \ldots
 \end{itemize}
 \section*{Sources}
-
-% We don't have any sources so far, right? :/
-% -- Ah, young grasshopper! But we do! :D
 
 \begin{itemize}
 	\item [1] Barto and Sutton (http://webdocs.cs.ualberta.ca/~sutton/book/the-book.html) \ldots
