value iteration table added

--- a/one/Assignment1_Group4.tex
+++ b/one/Assignment1_Group4.tex
@@ -182,6 +182,7 @@ Policy iteration is an algorithm for finding the optimal policy. After performin
 
 
 \begin{center}
+\scalebox{0.7}{
 \begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
 \hline
 \multicolumn{12}{|c|}{Policy Iteration - Value Grid in loop 7}\\
@@ -191,7 +192,7 @@ Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
 \hline
 0 & 3.710664 & 4.638330 & 5.807816 & 7.259770 & 9.084616 & 11.355770 & 9.084616 & 7.259770 & 5.807816 & 4.638330 & 3.710664 \\ 1 & 4.638330 & 5.807816 & 7.259770 & 9.084616 & 11.355770 & 14.204616 & 11.355770 & 9.084616 & 7.259770 & 5.807816 & 4.638330 \\ 2 & 5.807816 & 7.259770 & 9.084616 & 11.355770 & 14.204616 & 17.755770 & 14.204616 & 11.355770 & 9.084616 & 7.259770 & 5.807816 \\ 3 & 7.259770 & 9.084616 & 11.355770 & 14.204616 & 17.755770 & 22.204616 & 17.755770 & 14.204616 & 11.355770 & 9.084616 & 7.259770 \\ 4 & 9.084616 & 11.355770 & 14.204616 & 17.755770 & 22.204616 & 27.755770 & 22.204616 & 17.755770 & 14.204616 & 11.355770 & 9.084616 \\ 5 & 11.355770 & 14.204616 & 17.755770 & 22.204616 & 27.755770 & 22.204616 & 27.755770 & 22.204616 & 17.755770 & 14.204616 & 11.355770 \\ 6 & 9.084616 & 11.355770 & 14.204616 & 17.755770 & 22.204616 & 27.755770 & 22.204616 & 17.755770 & 14.204616 & 11.355770 & 9.084616 \\ 7 & 7.259770 & 9.084616 & 11.355770 & 14.204616 & 17.755770 & 22.204616 & 17.755770 & 14.204616 & 11.355770 & 9.084616 & 7.259770 \\ 8 & 5.807816 & 7.259770 & 9.084616 & 11.355770 & 14.204616 & 17.755770 & 14.204616 & 11.355770 & 9.084616 & 7.259770 & 5.807816 \\ 9 & 4.638330 & 5.807816 & 7.259770 & 9.084616 & 11.355770 & 14.204616 & 11.355770 & 9.084616 & 7.259770 & 5.807816 & 4.638330 \\ 10 & 3.710664 & 4.638330 & 5.807816 & 7.259770 & 9.084616 & 11.355770 & 9.084616 & 7.259770 & 5.807816 & 4.638330 & 3.710664 \\
 \hline
-\end{tabular}
+\end{tabular}}
 \end{center}
 
 
@@ -257,25 +258,24 @@ Prey is located at (5, 5)
 \scalebox{0.7}{
 \begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
 \hline
-\multicolumn{11}{|c|}{Value Iteration Grid  in loop 8}\\
+\multicolumn{12}{|c|}{v in loop 4}\\
 \hline
-Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\ 
+Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
 
 \hline
-0 & 0.000000 & 0.000000 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000000 & 0.000000 \\
-1 & 0.000000 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000000 \\
-2 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 \\
-3 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 \\
-4 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 \\
-5 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & \cellcolor{red!40}0.000000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 \\
-6 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 \\
-7 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 \\
-8 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 \\
-9 & 0.000000 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000000 \\
-10 & 0.000000 & 0.000000 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000000 & 0.000000 \\
+0 & 0.000000 & 0.000000 & 0.000000 & 0.000009 & 0.000180 & 0.001225 & 0.000180 & 0.000009 & 0.000000 & 0.000000 & 0.000000 \\
+1 & 0.000000 & 0.000000 & 0.000010 & 0.000240 & 0.002690 & 0.013480 & 0.002690 & 0.000240 & 0.000010 & 0.000000 & 0.000000 \\
+2 & 0.000000 & 0.000010 & 0.000240 & 0.002940 & 0.021480 & 0.117186 & 0.021480 & 0.002940 & 0.000240 & 0.000010 & 0.000000 \\
+3 & 0.000009 & 0.000240 & 0.002940 & 0.021480 & 0.166610 & 0.812180 & 0.166610 & 0.021480 & 0.002940 & 0.000240 & 0.000009 \\
+4 & 0.000180 & 0.002690 & 0.021480 & 0.166610 & 0.812180 & 10.000000 & 0.812180 & 0.166610 & 0.021480 & 0.002690 & 0.000180 \\
+5 & 0.001225 & 0.013480 & 0.117186 & 0.812180 & 10.000000 & 0.000000 & 10.000000 & 0.812180 & 0.117186 & 0.013480 & 0.001225 \\
+6 & 0.000180 & 0.002690 & 0.021480 & 0.166610 & 0.812180 & 10.000000 & 0.812180 & 0.166610 & 0.021480 & 0.002690 & 0.000180 \\
+7 & 0.000009 & 0.000240 & 0.002940 & 0.021480 & 0.166610 & 0.812180 & 0.166610 & 0.021480 & 0.002940 & 0.000240 & 0.000009 \\
+8 & 0.000000 & 0.000010 & 0.000240 & 0.002940 & 0.021480 & 0.117186 & 0.021480 & 0.002940 & 0.000240 & 0.000010 & 0.000000 \\
+9 & 0.000000 & 0.000000 & 0.000010 & 0.000240 & 0.002690 & 0.013480 & 0.002690 & 0.000240 & 0.000010 & 0.000000 & 0.000000 \\
+10 & 0.000000 & 0.000000 & 0.000000 & 0.000009 & 0.000180 & 0.001225 & 0.000180 & 0.000009 & 0.000000 & 0.000000 & 0.000000 \\
 \hline
-\end{tabular}
-}
+\end{tabular}}
 \end{center}
 
 This shows that value iteration has the exact same results as policy iteration. Also, we see that the algorithm converges quicker than policy iteration.
@@ -302,7 +302,22 @@ Performing policy evaluation gives detailed insight in the which actions the age
 
 The discount factors of these algorithms have also been evaluated. It has shown that a low discount factor (0.1) leads to quick convergence, but is quite radical. Many states in the state space will contain random policies. As this is not the goal of planning algorithms, this is undesired. Too high a discount rate (0.9) will lead to slow convergence, but each state will be evaluated and have optimal actions to take. This does take longer than often is necessary. This leads to the conclusion that, in this case, a learning rate of about 0.7 or 0.8 is optimal.
 
-Smarter state-space encoding does indeed improve performance
+Smarter state-space encoding does indeed improve performance.
+
+
+
+\begin{center}
+	\begin{tabular}{ l || l }
+		Discount Factor & Iterations to converge \\ 
+		\hline
+		0.1 & 1 \\
+		0.5 & 7 \\
+		0.7 & 7 \\
+		0.9 & 8 \\	
+	\end{tabular}
+\end{center}
+
+
 
 \section*{Files attached}
 \begin{itemize}
