--- a/one/Assignment1_Group4.tex
+++ b/one/Assignment1_Group4.tex
@@ -322,8 +322,8 @@ Smarter state-space encoding does indeed improve performance.
 
 \section*{Files attached}
 \begin{itemize}
-\item game.py
-\item agents.py
+\item -newstate.py
+\item agents_new.py
 \item helpers.py \ldots
 \end{itemize}
 \section*{Sources}
