Me is the smartest person ever...

--- a/one/Assignment1_Group4.tex
+++ b/one/Assignment1_Group4.tex
@@ -134,7 +134,7 @@ The current implementation consists of the following files:
 	\begin{tabular}{  l ||  l }
 		Average run time & Standard deviation \\ 
 		\hline
-		296 rounds &  286.580390118 %average run time and standart deviation to be filled here 	
+		291 &  302.93 %average run time and standart deviation to be filled here 	
 	\end{tabular}
 \end{center}
 
@@ -260,22 +260,22 @@ Prey is located at (5, 5)
 \scalebox{0.7}{
 \begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
 \hline
-\multicolumn{12}{|c|}{Value Iteration Grid in loop 4}\\
+\multicolumn{12}{|c|}{Value Iteration Grid in loop 10}\\
 \hline
 Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
 
 \hline
-0 & 0.000000 & 0.000000 & 0.000000 & 0.000009 & 0.000180 & 0.001225 & 0.000180 & 0.000009 & 0.000000 & 0.000000 & 0.000000 \\
-1 & 0.000000 & 0.000000 & 0.000010 & 0.000240 & 0.002690 & 0.013480 & 0.002690 & 0.000240 & 0.000010 & 0.000000 & 0.000000 \\
-2 & 0.000000 & 0.000010 & 0.000240 & 0.002940 & 0.021480 & 0.117186 & 0.021480 & 0.002940 & 0.000240 & 0.000010 & 0.000000 \\
-3 & 0.000009 & 0.000240 & 0.002940 & 0.021480 & 0.166610 & 0.812180 & 0.166610 & 0.021480 & 0.002940 & 0.000240 & 0.000009 \\
-4 & 0.000180 & 0.002690 & 0.021480 & 0.166610 & 0.812180 & 10.000000 & 0.812180 & 0.166610 & 0.021480 & 0.002690 & 0.000180 \\
-5 & 0.001225 & 0.013480 & 0.117186 & 0.812180 & 10.000000 & 0.000000 & 10.000000 & 0.812180 & 0.117186 & 0.013480 & 0.001225 \\
-6 & 0.000180 & 0.002690 & 0.021480 & 0.166610 & 0.812180 & 10.000000 & 0.812180 & 0.166610 & 0.021480 & 0.002690 & 0.000180 \\
-7 & 0.000009 & 0.000240 & 0.002940 & 0.021480 & 0.166610 & 0.812180 & 0.166610 & 0.021480 & 0.002940 & 0.000240 & 0.000009 \\
-8 & 0.000000 & 0.000010 & 0.000240 & 0.002940 & 0.021480 & 0.117186 & 0.021480 & 0.002940 & 0.000240 & 0.000010 & 0.000000 \\
-9 & 0.000000 & 0.000000 & 0.000010 & 0.000240 & 0.002690 & 0.013480 & 0.002690 & 0.000240 & 0.000010 & 0.000000 & 0.000000 \\
-10 & 0.000000 & 0.000000 & 0.000000 & 0.000009 & 0.000180 & 0.001225 & 0.000180 & 0.000009 & 0.000000 & 0.000000 & 0.000000 \\
+0 & 0.000001 & 0.000004 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000004 & 0.000001 \\ 
+1 & 0.000004 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000004 \\
+2 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 \\
+3 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 \\
+4 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 \\
+5 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 0.000000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 \\
+6 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 \\
+7 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 \\
+8 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 \\
+9 & 0.000004 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000004 \\
+10 & 0.000001 & 0.000004 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000004 & 0.000001 \\
 \hline
 \end{tabular}}
 \end{center}
@@ -286,10 +286,11 @@ This shows that value iteration has the exact same results as policy iteration. 
 	\begin{tabular}{ l || l }
 		Discount Factor & Iterations to converge \\ 
 		\hline
-		0.1 & 1 \\
-		0.5 & 7 \\
-		0.7 & 7 \\
-		0.9 & 8 \\	
+		0.1 & 6 \\
+		0.5 & 9 \\
+		0.7 & 10 \\
+		0.8 & 10 \\
+		0.9 & 11 \\	
 	\end{tabular}
 \end{center}
 
@@ -303,13 +304,13 @@ State space encoding was implemented to improve performance. By taking into acco
 
 \begin{center}
 	\begin{tabular}{ |l | l | l | l | l | l| }
-		Case & Discount factor & Time to converge & Avg. \# steps to catch pray & Standart deviation & Discount Factor\\ 
+		Case & Algorithm & $\gamma$ & Time to converge & Avg. \# steps & Standart deviation \\ 
 		\hline
-		1 & 0.1 & 11.0183360577 s & 20 & 20 & 15.4767567662 \\
-		2 & 0.5 & 0.19892 & 21 & 21 & 0.8 \\
-		3 & 0.7 & 0.19892 & 16 & 16 & 0.8 \\
-		4 & 0.8 & 1.65066 & 18 & 18 & 0.8 \\	
-		4 & 0.9 & 1.65066 & 19 & 19 & 0.8 \\	
+		1  & Value Iteration & 0.1 & 11.0183360577 s & 20 & 15.4767567662 \\
+		2  & Encoded Value Iteration & 0.5 & 0.19892 & 21 & 21 \\
+		3  & 15.4767567662 & 0.7 & 0.19892 & 16 & 16 \\
+		4  & 15.4767567662 & 0.8 & 1.65066 & 18 & 18 \\	
+		4  & 15.4767567662 & 0.9 & 1.65066 & 19 & 19 \\	
 	\end{tabular}
 \end{center}
 
