--- a/one/Assignment1_Group4.tex
+++ b/one/Assignment1_Group4.tex
@@ -141,13 +141,13 @@ The current implementation consists of the following files:
 \subsection*{Iterative policy evaluation}
 As described in the assignment, policy evaluation is implemented. The results will be analyzed in terms of agent (predator) and goal state (prey) locations. The following cases have been analyzed: 
 \begin{center}
-	\begin{tabular}{ |l | l | l | l | l | l | l| }
-		Case & Predator & Value & Prey & Value & Discount Factor & Iterations to converge \\ 
+	\begin{tabular}{ |l | l | l | l | l | l| }
+		Case & Predator & Prey & Value  & Discount Factor & Iterations to converge \\ 
 		\hline
-		1 & (0, 0) & 0.0033573 & (5, 5) & 2.850622 & 0.8 & 33 \\
-		2 & (2, 3) & 0.1989275 & (5, 4) & 2.850622 & 0.8 & 33 \\
-		3 & (2, 10) & 0.1989275 & (10, 0) & 2.850622 & 0.8 & 33 \\
-		4 & (10, 10) & 1.6506673 & (0, 0) & 2.850622 & 0.8 & 33 \\	
+		1 & (0, 0) & (5, 5) & 0.0049406  & 0.8 & 24 \\
+		2 & (2, 3) & (5, 4) & 0.1766713 & 0.8 & 24 \\
+		3 & (2, 10) & (10, 0) & 0.1766713 & 0.8 & 24 \\
+		4 & (10, 10) & (0, 0) & 1.1605528 & 0.8 & 24 \\	
 	\end{tabular}
 \end{center}
 
@@ -167,11 +167,11 @@ Case 4 has the agent starting at (10,10) and the prey located at (0,0). The dist
 	\begin{tabular}{ l || l }
 		Discount Factor & Iterations to converge \\ 
 		\hline
-		0.1 & 5 \\
-		0.5 & 13 \\
-		0.7 & 22 \\
-		0.8 & 33 \\
-		0.9 & 64 \\	
+		0.1 & 3 \\
+		0.5 & 8 \\
+		0.7 & 15 \\
+		0.8 & 24 \\
+		0.9 & 55 \\	
 	\end{tabular}
 \end{center}
 
@@ -260,22 +260,33 @@ Prey is located at (5, 5)
 \scalebox{0.7}{
 \begin{tabular}{ |l | l | l | l | l | l | l | l | l | l | l | l|}
 \hline
-\multicolumn{12}{|c|}{Value Iteration Grid in loop 10}\\
+\multicolumn{12}{|c|}{v in loop 16}\\
 \hline
 Indices y\textbackslash x &0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
 
 \hline
-0 & 0.000001 & 0.000004 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000004 & 0.000001 \\ 
-1 & 0.000004 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000004 \\
-2 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 \\
-3 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 \\
-4 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 \\
-5 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 0.000000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 \\
-6 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 10.000000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 \\
-7 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 1.600000 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 \\
-8 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.256000 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 \\
-9 & 0.000004 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.040960 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000004 \\
-10 & 0.000001 & 0.000004 & 0.000027 & 0.000168 & 0.001049 & 0.006554 & 0.001049 & 0.000168 & 0.000027 & 0.000004 & 0.000001 \\
+0 & 1.320840 & 1.629618 & 2.009615 & 2.476236 & 3.060473 & 3.584043 & 3.060473 &
+ 2.476236 & 2.009615 & 1.629618 & 1.320840 \\
+1 & 1.629618 & 1.987387 & 2.471198 & 3.074265 & 3.817584 & 4.538915 & 3.817584 &
+ 3.074265 & 2.471198 & 1.987387 & 1.629618 \\
+2 & 2.009615 & 2.471198 & 3.074265 & 3.824652 & 4.756831 & 5.759223 & 4.756831 &
+ 3.824652 & 3.074265 & 2.471198 & 2.009615 \\
+3 & 2.476236 & 3.074265 & 3.824652 & 4.756831 & 5.928854 & 7.272727 & 5.928854 &
+ 4.756831 & 3.824652 & 3.074265 & 2.476236 \\
+4 & 3.060473 & 3.817584 & 4.756831 & 5.928854 & 7.272727 & 10.000000 & 7.272727
+& 5.928854 & 4.756831 & 3.817584 & 3.060473 \\
+5 & 3.584043 & 4.538915 & 5.759223 & 7.272727 & 10.000000 & 0.000000 & 10.000000
+ & 7.272727 & 5.759223 & 4.538915 & 3.584043 \\
+6 & 3.060473 & 3.817584 & 4.756831 & 5.928854 & 7.272727 & 10.000000 & 7.272727
+& 5.928854 & 4.756831 & 3.817584 & 3.060473 \\
+7 & 2.476236 & 3.074265 & 3.824652 & 4.756831 & 5.928854 & 7.272727 & 5.928854 &
+ 4.756831 & 3.824652 & 3.074265 & 2.476236 \\
+8 & 2.009615 & 2.471198 & 3.074265 & 3.824652 & 4.756831 & 5.759223 & 4.756831 &
+ 3.824652 & 3.074265 & 2.471198 & 2.009615 \\
+9 & 1.629618 & 1.987387 & 2.471198 & 3.074265 & 3.817584 & 4.538915 & 3.817584 &
+ 3.074265 & 2.471198 & 1.987387 & 1.629618 \\
+10 & 1.320840 & 1.629618 & 2.009615 & 2.476236 & 3.060473 & 3.584043 & 3.060473
+& 2.476236 & 2.009615 & 1.629618 & 1.320840 \\
 \hline
 \end{tabular}}
 \end{center}
